fixed minutes display and added scroll for when the board gets too long

--- a/client-side/src/App.css
+++ b/client-side/src/App.css
@@ -1,5 +1,5 @@
     #train-board {
-        max-height: 50vh;
+        max-height: 40vh;
         overflow: scroll;
     }
     
